--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             </p>
           </div>
           <div class="container container--center">
-            <button class="button button--margin-bottom">
+            <button class="button button--margin">
               View our Versa Connect offers
             </button>
           </div>
