--- a/panel.html
+++ b/panel.html
@@ -114,21 +114,21 @@
           <div class="panel__slide" id="colors">
             <div>
               <div id="nonmetallic">
-                <div id="silver">
+                <div class="colors__slide" id="silver">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Silver.png"
                     alt="Silver Versa"
                     class="container"
                   />
                 </div>
-                <div id="DeepImpactBlue">
+                <div class="colors__slide" id="deep-impact-blue">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/DeepImpactBlue.png"
                     alt="DeepImpactBlue Versa"
                     class="container"
                   />
                 </div>
-                <div id="red">
+                <div class="colors__slide" id="red">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Red.png"
                     alt="Red Versa"
@@ -137,42 +137,42 @@
                 </div>
               </div>
               <div id="metallic">
-                <div id="metalicious">
+                <div class="colors__slide" id="metalicious">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Metalicious.png"
                     alt="Metalicious Versa"
                     class="container"
                   />
                 </div>
-                <div id="guard">
+                <div class="colors__slide" id="guard">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Guard.png"
                     alt="Guard Versa"
                     class="container"
                   />
                 </div>
-                <div id="solar">
+                <div class="colors__slide" id="solar">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Solar.png"
                     alt="Solar Versa"
                     class="container"
                   />
                 </div>
-                <div id="blazerblue">
+                <div class="colors__slide" id="blazer-blue">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/BlazerBlue.png"
                     alt="BlazerBlue Versa"
                     class="container"
                   />
                 </div>
-                <div id="black">
+                <div class="colors__slide" id="black">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Black.png"
                     alt="Black Versa"
                     class="container"
                   />
                 </div>
-                <div id="magnetic">
+                <div class="colors__slide" id="magnetic">
                   <img
                     src="https://www.bristolstreetversa.com/images/colour_swatches/Grand-Tourneo-Connect/Magnetic.png"
                     alt="Magnetic Versa"
@@ -181,17 +181,17 @@
                 </div>
               </div>
             </div>
-            <div>
-              <nav>
-                <a href="#silver" class="colors__link"></a>
-                <a href="#deepImpactBlue" class="colors__link"></a>
-                <a href="#red" class="colors__link"></a>
-                <a href="#metalicious" class="colors__link"></a>
-                <a href="#guard" class="colors__link"></a>
-                <a href="#solar" class="colors__link"></a>
-                <a href="#blazerBlue" class="colors__link"></a>
-                <a href="#black" class="colors__link"></a>
-                <a href="#magnetic" class="colors__link"></a>
+            <div class="">
+              <nav class="nav container--center">
+                <a href="#silver" class="colors__selector colors__selector--silver"></a>
+                <a href="#deep-impact-blue" class="colors__selector colors__selector--deep-impact-blue"></a>
+                <a href="#red" class="colors__selector colors__selector--red"></a>
+                <a href="#metalicious" class="colors__selector colors__selector--metalicious"></a>
+                <a href="#guard" class="colors__selector colors__selector--guard"></a>
+                <a href="#solar" class="colors__selector colors__selector--solar"></a>
+                <a href="#blazer-blue" class="colors__selector colors__selector--blazer-blue"></a>
+                <a href="#black" class="colors__selector colors__selector--black"></a>
+                <a href="#magnetic" class="colors__selector colors__selector--magnetic"></a>
               </nav>
             </div>
             <div>
@@ -259,8 +259,11 @@
             </div>
           </div>
         </div>
+        <div  class="container container--center">
+            <button class="button button--margin">View our Versa Connect offers</button>
+        </div>
       </div>
-      <!-- <button>View our Versa Connect offers</button> -->
+      
     </section>
     <script src="main.js"></script>
   </body>
