--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
             <div class="panel">
               <nav class="nav">
                 <a href="#dimensions" class="panel__selector panel--internal-borders nav__item--links-decoration">
-                  dimensions
+                  Dimensions
                 </a>
                 <a href="#layout" class="panel__selector panel--internal-borders nav__item--links-decoration">
-                  layout
+                  Layout
                 </a>
                 <a href="#colors" class="panel__selector panel--internal-borders nav__item--links-decoration">
-                  colors
+                  Colors
                 </a>
                 <a href="#trim" class="panel__selector nav__item--links-decoration">
                   Interior Trim
